dgx-quick/ssd/20211122/gpu=7g.40gb_5gpu_x_2pod/run20211122_20211124_090013_588087/stderr
  File "/home/kevin/openshift/matrix_benchmark/exec/mlperf/run_ssd.py", line 437
    if ENABLE_THANOS and :
                         ^
SyntaxError: invalid syntax
